# slippy

./: CONTRIBUTING.md  Cargo.toml  README.md  artifacts.json  changelog.rss  deck.md  index.html  oranda.json  slippy-installer.ps1.txt  slippy-installer.sh.txt
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
examples/: agent-conf.md  cheatsheet.md
src/: errors.rs  main.rs  message.rs
src/assets/: slide.js  styles.css
src/assets/themes/: axo.css  cupcake.css  dark.css  light.css  nash.css
src/slideshow/: html.rs  markdown.rs  markdown_parser.rs  mod.rs
tests/: cmd.rs
